crates/usd-pyo3/tests/usdValidation/bin/usdchecker/testUsdChecker/bad/unencapsulated_layer.usdz
version https://git-lfs.github.com/spec/v1
oid sha256:03ec722ede144936a2e0930284acb5b9fac9be4292e6a1705a2bbc5bc34fe74a
size 252
